fix(picker): adjust alignment for columns

--- a/core/src/components/picker-column-internal/picker-column-internal.scss
+++ b/core/src/components/picker-column-internal/picker-column-internal.scss
@@ -5,7 +5,6 @@
 
 :host {
   @include padding(0px, 16px, 0px, 16px);
-  min-width: 150px;
 
   height: 200px;
 
@@ -23,6 +22,8 @@
 
   // Hide scrollbars on Firefox
   scrollbar-width: none;
+
+  text-align: center;
 }
 
 /**
